--- a/assect/css/style.css
+++ b/assect/css/style.css
@@ -490,7 +490,6 @@ header {
     font-weight: normal;
 }
 
-
 .form-head a {
     color: red;
 }
@@ -538,21 +537,25 @@ header {
 /* project page - start */
 /* banner - start */
 .project-banner {
+    margin-bottom: 120px;
     width: 100%;
-    height: 800px;
-    /* height: 994px; */
-    border: 2px dashed red;
-    background-position: center;
-    background-size: cover;
+    /* height: 780px; */
+    height: 850px;
+    background-position: center 5%;
+    background-size: 110%;
     background-repeat: no-repeat;
+    display: flex;
+    align-items: end;
+    padding-bottom: 100px;
+}
+
+.project-banner-main {
+    width: 1050px;
+    margin: 0px auto;
+    padding: 0px 30px;
 }
 
 .project-banner-inner {
-    border: 2px dashed white;
-    margin: 0px 200px;
-    padding: 0px 30px;
-    height: 450px;
-    width: 1050px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -560,31 +563,88 @@ header {
 
 .banner-head {
     font-size: 70px;
+    text-align: center;
 }
 
+.banner-info {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 220px;
+}
+
+.banner-info>div {
+    width: 217px;
+}
+
+.banner-info h4 {
+    font-size: 15px;
+    margin-bottom: 10px;
+}
 
 /* banner - end */
 
 /* project-info - start */
 .project-info {
-    border: 2px dashed;
     width: 100%;
     height: auto;
     padding: 100px 200px;
-    background-color: aquamarine;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .project-info-main {
-    text-align: center;
-    font-size: 22px;
-    border: 2px dashed red;
     width: 680px;
 }
 
+.project-info-main p {
+    line-height: 35px;
+    font-weight: normal;
+    font-size: 20px;
+}
+
+.project-info-main a {
+    color: red;
+}
+
 /* project-info - end */
+
+/* Breaf and idea - start*/
+
+.breaf-main {
+    width: 1080px;
+    margin: 0px auto;
+}
+
+.breaf-img {
+    display: flex;
+    margin-bottom: 150px;
+}
+
+.breaf-img img {
+    height: 480px;
+    margin: 0px auto;
+}
+
+.breaf-con {
+    width: 700px;
+    text-align: center;
+    line-height: 30px;
+    margin: 150px auto;
+}
+
+.breaf-head h3 {
+    font-size: 50px;
+    font-weight: 400;
+    margin-bottom: 60px;
+}
+
+.breaf-con p:last-child {
+    margin-top: 10px;
+}
+
+/* Breaf and idea - end*/
+
 
 /* project video - start */
 .project-video {
@@ -615,6 +675,31 @@ header {
 /* project video - end */
 
 /* result - start */
+.result {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 150px;
+}
+
+.result-head {
+    margin: 100px 0px 60px 0px;
+}
+
+.result-head h3 {
+    font-size: 50px;
+    font-weight: 400;
+}
+
+.result-info {
+    width: 719px;
+    margin: 0px auto 80px auto;
+    line-height: 24px;
+}
+
+
 .result-img {
     height: 566px;
     width: 1050px;
@@ -623,6 +708,22 @@ header {
 .result-img img {
     width: 100%;
     height: 100%;
+}
+
+.rh-inner {
+    margin: 100px auto;
+    height: 120px;
+    width: 120px;
+    /* border: 2px solid; */
+    background-color: rgb(43, 43, 43);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+.rh-inner i {
+    font-size: 50px;
 }
 
 /* result - end */
@@ -671,7 +772,6 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .creature-main {
@@ -769,7 +869,6 @@ header {
     flex-direction: column;
     width: 1080px;
     margin: 0px auto;
-
 }
 
 .blog-quote-con-inner {
@@ -794,7 +893,6 @@ header {
 .bqc-con p {
     font-size: 16px;
 }
-
 
 .blog-quote-links-main {
     width: 1080px;
@@ -840,7 +938,6 @@ header {
 .comments-inner {
     margin: 0px auto;
     width: 719px;
-
 }
 
 .c-head {
