--- a/assect/css/style.css
+++ b/assect/css/style.css
@@ -50,6 +50,7 @@ header {
     position: relative;
     padding-top: 40px;
     padding-bottom: 40px;
+    border-bottom: 1px solid;
 }
 
 .logo img {
@@ -339,15 +340,40 @@ header {
 /* testimonials - start */
 .testimonials {
     width: 100%;
-    height: 630px;
-    background-color: aquamarine;
+    height: 710px;
     padding: 100px;
+    border: 2px dashed white;
 }
 
 .tm-main {
     height: 100%;
     width: 100%;
     border: 1px dashed red;
+    display: flex;
+}
+
+.tm-main>div {
+    width: 50%;
+    height: 100%;
+    border: 2px dashed;
+}
+
+.tm-con {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0 40px;
+}
+
+.tmc-img img {
+    width: 75px;
+    height: 75px;
+}
+
+.tmc-head h3 {
+    font-size: 45px;
+    font-weight: 400;
+    line-height: 65px;
 }
 
 /* testimonials - end */
@@ -356,7 +382,7 @@ header {
 .partners {
     width: 100%;
     height: 650px;
-    padding: 110px 110px;
+    padding: 110px;
 }
 
 .partners-main {
@@ -400,15 +426,46 @@ header {
 /* blog - start */
 .blog {
     width: 100%;
-    height: 730px;
-    background-color: cornflowerblue;
-    padding: 100px;
+    height: 790px;
+    border: 2px dashed white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .blog-main {
-    border: 2px dashed black;
-    height: 100%;
-    width: 100%;
+    border: 2px dashed green;
+    width: 1110px;
+    height: 570px;
+}
+
+.blog-inner {
+    border: 2px dashed yellow;
+    width: 1110px;
+    height: 570px;
+}
+
+.blog-head h3 {
+    font-size: 50px;
+    font-weight: 400;
+}
+
+.blog-con-main {
+    border: 2px dashed white;
+    display: flex;
+    justify-content: space-around;
+    height: 89%;
+    align-items: flex-end;
+}
+
+.blog-card {
+    border: 1px solid red;
+    width: 300px;
+    height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /* blog -  end*/
